[gd_scene load_steps=30 format=2]

[ext_resource path="res://BattleEngine/BattleEngine.gd" type="Script" id=1]
[ext_resource path="res://BattleEngine/Buttons/spr_fight1.png" type="Texture" id=2]
[ext_resource path="res://BattleEngine/Buttons/spr_mercy1.png" type="Texture" id=3]
[ext_resource path="res://BattleEngine/Buttons/spr_mercy0.png" type="Texture" id=4]
[ext_resource path="res://BattleEngine/Buttons/spr_item1.png" type="Texture" id=5]
[ext_resource path="res://BattleEngine/Buttons/spr_item0.png" type="Texture" id=6]
[ext_resource path="res://BattleEngine/Buttons/spr_fight0.png" type="Texture" id=7]
[ext_resource path="res://BattleEngine/Buttons/spr_act1.png" type="Texture" id=8]
[ext_resource path="res://BattleEngine/Buttons/spr_act0.png" type="Texture" id=9]
[ext_resource path="res://BattleEngine/Fight_Manager/Revenge Papyrus/RevengePapyrus.gd" type="Script" id=10]
[ext_resource path="res://Shared/Box/Box.tscn" type="PackedScene" id=11]
[ext_resource path="res://Fonts/ut-hp-font.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://BattleEngine/ActingSelector.gd" type="Script" id=13]
[ext_resource path="res://Shared/Soul/Soul.tscn" type="PackedScene" id=14]
[ext_resource path="res://BattleEngine/Fight_Manager/Revenge Papyrus/Papyrus.tscn" type="PackedScene" id=15]
[ext_resource path="res://BattleEngine/Buttons/Node/Buttons.gd" type="Script" id=16]
[ext_resource path="res://BattleEngine/Music/SWRevenge_-_MEGALOVANIA.mp3" type="AudioStream" id=17]
[ext_resource path="res://BattleEngine/Buttons/Sounds/snd_squeak.wav" type="AudioStream" id=18]
[ext_resource path="res://BattleEngine/Buttons/Sounds/snd_select.wav" type="AudioStream" id=19]
[ext_resource path="res://BattleEngine/ItemSelector.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 2 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": false,
"name": "default",
"speed": 0.0
} ]

[sub_resource type="DynamicFontData" id=5]
antialiased = false
hinting = 0
font_path = "res://Fonts/Mars_Needs_Cunnilingus.ttf"

[sub_resource type="DynamicFont" id=6]
size = 24
outline_color = Color( 1, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 10
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 0.913725, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0, 0, 1 )

[node name="BattleEngine" type="Node2D"]
script = ExtResource( 1 )

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 10 )

[node name="Papyrus" parent="Enemies" instance=ExtResource( 15 )]
position = Vector2( 316.967, 123.659 )

[node name="Box" parent="." instance=ExtResource( 11 )]
margin_left = 32.0
margin_top = 250.0
margin_right = 607.0
margin_bottom = 390.0
border = 7

[node name="Attacks" type="Node2D" parent="."]

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="Fight" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 88, 453 )
frames = SubResource( 1 )

[node name="Act" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 241, 453 )
frames = SubResource( 2 )

[node name="Item" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 401, 453 )
frames = SubResource( 3 )

[node name="Mercy" type="AnimatedSprite" parent="Buttons"]
position = Vector2( 556, 453 )
frames = SubResource( 4 )

[node name="HUD" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 33.3271
margin_top = 399.673
margin_right = 608.327
margin_bottom = 420.673
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Name" type="RichTextLabel" parent="HUD"]
margin_right = 113.0
margin_bottom = 21.0
rect_min_size = Vector2( 113, 0 )
size_flags_stretch_ratio = 0.7
custom_fonts/normal_font = SubResource( 6 )
text = "PAPYRU"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LV" type="RichTextLabel" parent="HUD"]
margin_left = 117.0
margin_right = 210.0
margin_bottom = 21.0
rect_min_size = Vector2( 93, 0 )
rect_clip_content = false
size_flags_stretch_ratio = 0.54
custom_fonts/normal_font = SubResource( 6 )
text = "LV 19"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPText" type="CenterContainer" parent="HUD"]
margin_left = 214.0
margin_right = 241.0
margin_bottom = 21.0

[node name="Text" type="RichTextLabel" parent="HUD/HPText"]
margin_top = 5.0
margin_right = 27.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 27, 10 )
custom_fonts/normal_font = SubResource( 7 )
text = "hp"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
margin_left = 245.0
margin_right = 345.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 21 )
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 9 )
max_value = 92.0
step = 1.0
value = 92.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KRText" type="CenterContainer" parent="HUD"]
visible = false
margin_left = 349.0
margin_right = 380.0
margin_bottom = 21.0

[node name="Text" type="RichTextLabel" parent="HUD/KRText"]
margin_top = 5.0
margin_right = 31.0
margin_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 31, 10 )
custom_fonts/normal_font = SubResource( 7 )
text = " kr"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="CenterContainer" parent="HUD"]
margin_left = 349.0
margin_right = 449.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/HP"]
margin_left = 8.0
margin_right = 91.0
margin_bottom = 20.0

[node name="CurrentHP" type="RichTextLabel" parent="HUD/HP/HBoxContainer"]
margin_right = 30.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
custom_fonts/normal_font = SubResource( 6 )
text = "92"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slash" type="RichTextLabel" parent="HUD/HP/HBoxContainer"]
margin_left = 34.0
margin_right = 49.0
margin_bottom = 20.0
rect_min_size = Vector2( 15, 20 )
custom_fonts/normal_font = SubResource( 6 )
text = "/"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MaxHP" type="RichTextLabel" parent="HUD/HP/HBoxContainer"]
margin_left = 53.0
margin_right = 83.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 20 )
size_flags_stretch_ratio = 0.79
custom_fonts/normal_font = SubResource( 6 )
text = "92"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Soul" parent="." instance=ExtResource( 14 )]
position = Vector2( 62.7556, 208.974 )

[node name="Select" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="Squeak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )

[node name="ActingSelector" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="ItemSelector" type="Node2D" parent="."]
script = ExtResource( 20 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -10.0
autoplay = true

[node name="Camera" type="Camera2D" parent="."]
position = Vector2( 320, 240 )
rotating = true
current = true
